[package]
name = "justins_tor_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libtor = { version = "47.8.0", features=["vendored-openssl", "vendored-lzma", "vendored-zstd"] } 
# libtor = { version = "47.8.0" } 
